2008-01-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/input/intef2.input.pamphlet,
	src/input/intmix2.input.pamphlet: Remove redundant test files.
	src/input/calculus2.input.pamphlet: Remove redundant unused
	tests, fix wrong Laplace examples.
	src/input/Makefile.in: Adjust.

2008-01-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/bootlex.lisp, src/interp/fnew.meta,
	src/interp/fnewmeta.lisp, src/interp/parsing.lisp:
	Scan special chars as symbols.

2008-01-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/input/easter.input.pamphlet: Remove redundant test file.
	src/input/Makefile.in: Adjust.

2008-12-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-output.boot: Remove unused parameter
	to 'SubstWhileDesizing' and 'SubstWhileDesizingList'.

2008-12-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/bootlex.lisp, src/interp/daase.lisp,
	src/interp/fnew.meta, src/interp/fnewmeta.lisp,
	src/interp/macros.lisp, src/interp/newaux.lisp,
	src/interp/parsing.lisp: Simplify old scanner.
	src/interp/metalex.lisp, src/interp/metameta.lisp: Remove.
	src/interp/Makefile.in: Adjust

2008-12-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Correct problem with )show.
	* src/interp/format.boot: form2String(): do not set
	'$InteractiveMode' to false.
	unparseInputForm(): new function, set '$InteractiveMode'
	to false here.
	src/algebra/mkfunc.spad.pamphlet: unparse(): Use
	unparseInputForm instead of form2String.

2008-12-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/br-con.boot, src/interp/br-op1.boot,
	src/interp/c-doc.boot, src/interp/patches.lisp:
	Misc cleanups.

2008-12-19  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/nrunfast.boot: newHasTest(): Handle 'has'
	for signatures.

2008-12-18  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/apply.boot: compFormWithModemap(): Allow
	calling type-valued functions in Spad.

2008-12-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
