@@ -1,3 +1,9 @@
+2008-01-07  Aleksej Saushev <asau@inbox.ru>
+
+	Fix bootstrap failure with ECL on NetBSD.
+	* src/lisp/fricas-lisp.lisp: For ECL on NetBSD and :unix
+	to featues.
+
 2008-01-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/input/intef2.input.pamphlet,
